k8s/config/yatai-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/websocket-services: yatai
  name: yatai-ingress
  namespace: yatai-system
spec:
  rules:
  - host: yatai.${DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: yatai
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - secretName: yatai-tls
